--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = ""
 authors = [{ name = "Seu nome aqui", email = "seu.email@email.com.br" }]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = ["django (>=5.1.6,<6.0.0)"]
+requires-python = ">=3.10, <3.13"
+dependencies = ["django (>=5.1.6,<6.0.0)", "djangorestframework (>=3.16.1,<4.0.0)", "psycopg2-binary (>=2.9.11,<3.0.0)"]
 
 
 [build-system]
